--- a/static/css/style.css
+++ b/static/css/style.css
@@ -19,9 +19,9 @@ rgba(250,236,50,255) (vibrant-yellow)
 rgba(245,177,62,255) (#f5b13e) (soft-orange)
 rgba(250,218,77,221) (soft-yellow)
 
-Logo Colors
-#2596be light teal
+Logo Colors:
 
+#2596be light teal
 */
 
 /* Navbar and Logo */
@@ -31,10 +31,31 @@ Logo Colors
 }
 
 #signup_button {
-    border: 2px solid #2596be;
+    border: 2px solid #41ccff;
     padding: 5px;
 }
 
 .navbar {
     border-bottom: 2px solid black;
+}
+
+/* Footer */
+
+footer {
+    height: 120px;
+    border-top: 2px solid black;
+}
+
+footer a {
+    padding: 0 5px;
+    font-size: 1.5em;
+    color: black;
+    text-decoration: none;
+}
+
+#footer-nav {
+    font-size: 0.6em;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
