--- a/templates/base.html
+++ b/templates/base.html
@@ -61,7 +61,40 @@
     </main>
 
     <footer>
-        <!-- Footer -->
+        <footer class="container-fluid d-flex flex-column justify-content-center bg-light text-dark mt-auto">
+            <div class="row d-flex justify-content-between">
+                <div class="d-sm-block col-sm-4 d-sm-flex justify-content-start">
+                    <ul id="footer-nav" class="d-flex flex-row justify-content-center flex-sm-column">
+                        <li>
+                            <a href="{% url 'home '}">Home</a>
+                        </li>
+                        <li>
+                            <a href="#">Reports</a>
+                        </li>
+                        <li>
+                            <a href="#">Login</a>
+                        </li>
+                        <li>
+                            <a href="#">Sign-up</a>
+                        </li>
+                    </ul>
+                </div>
+                <div class="d-none col-sm-4 d-sm-flex text-center justify-content-center">
+                    Take care out there & always reach for more!
+                </div>
+                <div class="text-center col-sm-4 d-sm-flex justify-content-end mt-2 mt-sm-0">
+                    <a href="reach@climbing_reports.com" target="_blank">
+                        <i class="fa-solid fa-envelope"></i>
+                    </a>
+                    <a href="https://www.instagram.com/" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                    <a href="https://www.facebook.com/" target="_blank">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                </div>
+            </div>
+        </footer>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
