--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,34 @@ Logo Colors:
     border-bottom: 2px solid black;
 }
 
+/* Header Images */
+
+#head-img-wrapper {
+    overflow: hidden;
+    height: 685px;
+}
+
+#head-img-wrapper img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+#head-btns {
+    top: 75%;
+    left: 50%;
+}
+
+#head-sign-up-btn {
+    border: 2px solid #2596be;
+}
+
+#head-sign-up-btn:hover {
+    border-color: #41ccff;
+    transition: 0.2s;
+}
+
+
 /* Footer */
 
 footer {
