--- a/templates/reports.html
+++ b/templates/reports.html
@@ -2,51 +2,77 @@
 
 {% block content %}
 
-<h1>Condition Reports</h1>
-<p>Written by climbers for climbers.</p>
+
+<!-- Title -->
+<div class="container-fluid p-3">
+    <div class="row text-center">
+        <h1>Condition Reports</h1>
+        <h6>Written by climbers for climbers.</h6>
+    </div>
+</div>
+
+<!-- Search Bar and Filters -->
+
+
 
 <!-- Reports -->
 
-<div class="container-fluid">
+<div class="container-fluid w-75">
 
+    <!-- List Key -->
+    <div class="row text-center text-muted">
+        <div class="col-3">
+            <i class="fa-solid fa-camera"></i>
+        </div>
+        <div class="col-3">
+            <p>Title</p>
+        </div>
+        <div class="col-3">
+            <p>Conditions</p>
+        </div>
+        <div class="col-3">
+            <p>Date & Author</p>
+        </div>
+    </div>
     <div class="row">
 
         {% for report in report_list %}
-        <a href="#" class="d-flex">
+        <a href="#" class="report-list-item d-flex p-1">
 
             <!-- Images -->
-            <div class="col-3">
+            <div class="col-3 d-flex align-items-center justify-content-center">
                 {% if report.images.count > 0 %}
                 <!-- Images are uploaded for the report -->
-                    {% for image_file in report.images.all %}
-                        {% if forloop.first %}
-                            <img src="{{ image_file.image_file.url }}" alt="{{ report.title }}" class="img-thumbnail">
-                        {% endif %}
-                    {% endfor %}
+                {% for image_file in report.images.all %}
+                {% if forloop.first %}
+                <img src="{{ image_file.image_file.url }}" alt="{{ report.title }}" class="img-thumbnail">
+                {% endif %}
+                {% endfor %}
                 {% else %}
                 <!-- No images available in report -->
-                    <img src="/static/images/no-images.png" alt="No images available" class="img-thumbnail">
+                <img src="/static/images/no-images.png" alt="No images available" class="img-thumbnail">
                 {% endif %}
             </div>
-            <!-- Title & author -->
+            <!-- Title -->
             <div class="col-3">
-                    <h3>{{ report.title }}</h3>
-                    <p>{{ report.activity_category|title }}</p>
+                <h5>{{ report.title }}</h5>
+                <p>{{ report.activity_category|title }}</p>
             </div>
             <!-- Overall Conditions -->
-            <div class="d-flex flex-column align-items-center col-3">
+            <div class="d-flex flex-column align-items-center justify-content-center col-3">
                 {% if report.overall_conditions == "perfect" %}
-                    <i class="fa-solid fa-star"></i>
+                <i class="fa-solid fa-star"></i>
                 {% elif report.overall_conditions == "good" %}
-                    <i class="fa-solid fa-circle-check"></i>
+                <i class="fa-solid fa-circle-check"></i>
                 {% elif report.overall_conditions == "ok" %}
-                    <i class="fa-solid fa-circle-exclamation"></i>
+                <i class="fa-solid fa-circle-exclamation"></i>
                 {% else %}
-                    <i class="fa-solid fa-circle-xmark"></i>
+                <i class="fa-solid fa-circle-xmark"></i>
                 {% endif %}
                 {{ report.overall_conditions }}
             </div>
-            <div class="col-3">
+            <!-- Author Activity Date -->
+            <div class="col-3 d-flex flex-column justify-content-center align-items-center">
                 <p>{{ report.start_date }}</p>
                 <p><i class="fa-solid fa-user-pen"></i> {{ report.author }}</p>
             </div>
