--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Condition reports website for climbers, written by climbers">
     <meta name="keywords"
         content="climbing, alpinism, mountains, conditions reports, conditions, sports climbing, climbers, alpinists, ice, snow, rock">
-        
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
@@ -41,7 +41,7 @@
                         <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Report</a>
+                        <a class="nav-link" href="{% url 'reports' %}">Report</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Login</a>
@@ -60,13 +60,13 @@
         {% endblock content %}
     </main>
 
-    <footer>
-        <footer class="container-fluid d-flex flex-column justify-content-center bg-light text-dark mt-auto">
-            <div class="row d-flex justify-content-between">
-                <div class="d-sm-block col-sm-4 d-sm-flex justify-content-start">
-                    <ul id="footer-nav" class="d-flex flex-row justify-content-center flex-sm-column">
-                        <li>
-                            <a href="{% url 'home '}">Home</a>
+
+    <footer class="container-fluid d-flex flex-column justify-content-center bg-light text-dark mt-auto">
+        <div class="row d-flex justify-content-between">
+            <div class="d-sm-block col-sm-4 d-sm-flex justify-content-start">
+                <ul id="footer-nav" class="d-flex flex-row justify-content-center flex-sm-column">
+                    <li>
+                        <a href="{% url 'home '}">Home</a>
                         </li>
                         <li>
                             <a href="#">Reports</a>
@@ -94,7 +94,7 @@
                     </a>
                 </div>
             </div>
-        </footer>
+        </div>
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
