--- a/templates/report_details.html
+++ b/templates/report_details.html
@@ -2,63 +2,42 @@
 
 {% block content %}
 
-<div class="container-fluid">
-    <div class="row">
-        <h1>{{ report.title }} - {{ report.start_date }}</h1>
-    </div>
-
+<div class="container-fluid d-flex flex-column align-items-center">
+    <h1>{{ report.title }} - {{ report.start_date }}</h1>
+</div>
+<div class="container-fluid d-flex justify-content-center">
     <div class="row w-75">
-        <!-- Info -->
-        <div class="col-6">
-            <div class="row">
-
-                <p class="report-info-item">{{ report.author }}</p>
-
-                <p class="report-info-item">{{ report.created_on }}</p>
-
-                <p class="report-info-item">{{ report.activity_category }}</p>
-
-            </div>
-
-
-            <div class="row">
-                <div class="col-6">
-                    <p class="report-info-item">{{ report.overall_conditions }}</p>
-                </div>
-                <div class="col-6">
-                    <p class="report-info-item">{{ report.time_taken }}</p>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-6">
-                    <p class="report-info-item">{{ report.number_in_group }}</p>
-                </div>
-                <div class="col-6">
-                    <p class="report-info-item">{{ report.number_on_route }}</p>
-                </div>
-            </div>
-            <div class="row">
-                {{ report.description|safe }}
-            </div>
-        </div>
-        <!-- Images and Map -->
-        <div class="col-6">
-            <div class="row">
-                {% if report.images.count > 0 %}
-                <!-- Images are uploaded for the report -->
-                {% for image_file in report.images.all %}
-                <img src="{{ image_file.image_file.url }}" alt="{{ report.title }}" class="img-thumbnail">
-                {% endfor %}
-                {% else %}
-                <!-- No images available in report -->
-                <img src="/static/images/no-images.png" alt="No images available" class="img-thumbnail">
-                {% endif %}
-            </div>
-            <div class="row">
-                <iframe src=" {{ report.gps_map_link }}" frameborder="" allowfullscreen="" width="100%" height="300"></iframe>
-            </div>
-        </div>
+        {% if report.images.count > 0 %}
+    
+        {% for image_file in report.images.all %}
+        <img src="{{ image_file.image_file.url }}" alt="{{ report.title }}" class="img-thumbnail">
+        {% endfor %}
+        {% else %}
+    
+        <img src="/static/images/no-images.png" alt="No images available" class="img-thumbnail">
+        {% endif %}
     </div>
 </div>
+<div id="report-info-wrapper" class="container-fluid d-flex justify-content-center bg-light rounded">
+    <div class="report-info col-md-6 d-flex flex-column align-items-center text-center">
+        <!-- Infor -->
+        <p class="report-info-item"><span class="text-muted">Author: </span>{{ report.author }}</p>
+        <p class="report-info-item"><span class="text-muted">Published: </span>{{ report.created_on }}</p>
+        <p class="report-info-item"><span class="text-muted">Activity type:
+            </span>{{ report.activity_category }}</p>
+        <p class="report-info-item inline-block"><span class="text-muted">Conditions:
+            </span>{{ report.overall_conditions }}</p>
+        <p class="report-info-item inline-block"><span class="text-muted">Time taken:
+            </span>{{ report.time_taken }}</p>
+        <p class="report-info-item"><span class="text-muted"># in group: </span>{{ report.number_in_group }}
+        </p>
+        <p class="report-info-item"><span class="text-muted"># on route: </span>{{ report.number_on_route }}</p>
+    </div>
+    <div class="report-info col-md-6">
+        <p class=""><span class="text-muted">Description:<br></span>{{ report.description|striptags }}</p>
+    </div>
+</div>
+
+<!-- <iframe src=" {{ report.gps_map_link }}" frameborder="" allowfullscreen="" width="50%" height="400"></iframe> -->
 
 {% endblock %}
