--- a/templates/report_details.html
+++ b/templates/report_details.html
@@ -5,36 +5,60 @@
 <div class="container-fluid d-flex flex-column align-items-center">
     <h1>{{ report.title }} - {{ report.start_date }}</h1>
 </div>
+
 <div class="container-fluid d-flex justify-content-center">
-    <div class="row w-75">
-        {% if report.images.count > 0 %}
-    
-        {% for image_file in report.images.all %}
-        <img src="{{ image_file.image_file.url }}" alt="{{ report.title }}" class="img-thumbnail">
-        {% endfor %}
-        {% else %}
-    
-        <img src="/static/images/no-images.png" alt="No images available" class="img-thumbnail">
-        {% endif %}
-    </div>
-</div>
-<div id="report-info-wrapper" class="container-fluid d-flex justify-content-center bg-light rounded">
-    <div class="report-info col-md-6 d-flex flex-column align-items-center text-center">
-        <!-- Infor -->
-        <p class="report-info-item"><span class="text-muted">Author: </span>{{ report.author }}</p>
-        <p class="report-info-item"><span class="text-muted">Published: </span>{{ report.created_on }}</p>
-        <p class="report-info-item"><span class="text-muted">Activity type:
-            </span>{{ report.activity_category }}</p>
-        <p class="report-info-item inline-block"><span class="text-muted">Conditions:
-            </span>{{ report.overall_conditions }}</p>
-        <p class="report-info-item inline-block"><span class="text-muted">Time taken:
-            </span>{{ report.time_taken }}</p>
-        <p class="report-info-item"><span class="text-muted"># in group: </span>{{ report.number_in_group }}
-        </p>
-        <p class="report-info-item"><span class="text-muted"># on route: </span>{{ report.number_on_route }}</p>
-    </div>
-    <div class="report-info col-md-6">
-        <p class=""><span class="text-muted">Description:<br></span>{{ report.description|striptags }}</p>
+    <div class="row w-75 bg-dark rounded p-3">
+        <!-- Info -->
+        <div class="col-md-6">
+
+            <div class="container text-center">
+                <div class="row g-2">
+                    <div class="col-12">
+                        <div class="p-3 border rounded bg-light">{{ report.author }}</div>
+                    </div>
+                    <div class="col-12">
+                        <div class="p-3 border rounded bg-light">{{ report.created_on }}</div>
+                    </div>
+                    <div class="col-12">
+                        <div class="p-3 border rounded bg-light">{{ report.activity_category }}</div>
+                    </div>
+                    <div class="col-6">
+                        <div class="p-3 border rounded bg-light">{{ report.overall_conditions }}</div>
+                    </div>
+                    <div class="col-6">
+                        <div class="p-3 border rounded bg-light">{{ report.time_taken }}</div>
+                    </div>
+                    <div class="col-6">
+                        <div class="p-3 border rounded bg-light">{{ report.number_in_group }}</div>
+                    </div>
+                    <div class="col-6">
+                        <div class="p-3 border rounded bg-light">{{report.number_on_route}}</div>
+                    </div>
+                    <div class="col-12">
+                        <div class="p-3 border rounded bg-light text-start">{{ report.description|striptags }}</div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <!-- Images -->
+        <div class="col-md-6">
+
+            {% if report.images.count > 0 %}
+
+            {% for image_file in report.images.all %}
+            <div class="report-img">
+                <img src="{{ image_file.image_file.url }}" alt="{{ report.title }}">
+            </div>
+            {% endfor %}
+            {% else %}
+            <div class="report-img">
+                <img src="/static/images/no-images.png" alt="No images available" class="img-thumbnail">
+            </div>
+            {% endif %}
+
+        </div>
+
     </div>
 </div>
 
