--- a/templates/report_details.html
+++ b/templates/report_details.html
@@ -1,41 +1,96 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<!-- Title & back button -->
+<div class="container-fluid d-flex flex-column align-items-center mt-3">
+    <div class="row w-75">
+        <div class="col-10 p-0">
+            <h1>{{ report.title }}</h1>
+            <h2>{{ report.start_date }}</h2>
+        </div>
+        <div class="col-2 pb-2 d-flex flex-row justify-content-end align-items-end text-center">
+            <a class="back-button" href="{% url 'reports' %}">
+                <i class="fa-solid fa-list"></i>
+                <p class="m-0">Reports List</p>
+            </a>
+        </div>
 
-<div class="container-fluid d-flex flex-column align-items-center">
-    <h1>{{ report.title }} - {{ report.start_date }}</h1>
+    </div>
+
 </div>
 
 <div class="container-fluid d-flex justify-content-center">
-    <div class="row w-75 bg-dark rounded p-3">
+    <div class="row w-75 bg-light rounded p-3 mb-3">
         <!-- Info -->
         <div class="col-md-6">
 
-            <div class="container text-center">
+            <div class="container text-start">
                 <div class="row g-2">
                     <div class="col-12">
-                        <div class="p-3 border rounded bg-light">{{ report.author }}</div>
+                        <div class="border rounded bg-light">
+                            <p class="info-label text-muted">Author:</p>
+                            <p class="info-item">{{ report.author }}</p>
+                        </div>
                     </div>
                     <div class="col-12">
-                        <div class="p-3 border rounded bg-light">{{ report.created_on }}</div>
+                        <div class="border rounded bg-light">
+                            <p class="info-label text-muted">Published:</p>
+                            <p class="info-item">{{ report.created_on }}</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="border rounded bg-light">
+                            <p class="info-label text-muted">Climb Type:</p>
+                            <p class="info-item">{{ report.activity_category|title }}</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="border rounded bg-light">
+                            <p class="info-label text-muted">Time Taken:</p>
+                            <p class="info-item">{{ report.time_taken }}</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="border rounded bg-light">
+                            <p class="info-label text-muted">Conditions:</p>
+                            <p class="info-item">
+                                &nbsp;
+                                {% if report.overall_conditions == "perfect" %}
+                                <i class="fa-solid fa-star"></i>
+                                {% elif report.overall_conditions == "good" %}
+                                <i class="fa-solid fa-circle-check"></i>
+                                {% elif report.overall_conditions == "ok" %}
+                                <i class="fa-solid fa-circle-exclamation"></i>
+                                {% else %}
+                                <i class="fa-solid fa-circle-xmark"></i>
+                                {% endif %}
+                                {{ report.overall_conditions|title }}&nbsp;&nbsp;
+                            </p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="border rounded bg-light">
+                            <p class="info-label text-muted">End Date:</p>
+                            <p class="info-item">{{ report.end_date }}</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="border rounded bg-light">
+                            <p class="info-label text-muted"># in Group:</p>
+                            <p class="info-item">{{ report.number_in_group }}</p>
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <div class="border rounded bg-light">
+                            <p class="info-label text-muted"># on Route:</p>
+                            <p class="info-item">{{report.number_on_route}}</p>
+                        </div>
                     </div>
                     <div class="col-12">
-                        <div class="p-3 border rounded bg-light">{{ report.activity_category }}</div>
-                    </div>
-                    <div class="col-6">
-                        <div class="p-3 border rounded bg-light">{{ report.overall_conditions }}</div>
-                    </div>
-                    <div class="col-6">
-                        <div class="p-3 border rounded bg-light">{{ report.time_taken }}</div>
-                    </div>
-                    <div class="col-6">
-                        <div class="p-3 border rounded bg-light">{{ report.number_in_group }}</div>
-                    </div>
-                    <div class="col-6">
-                        <div class="p-3 border rounded bg-light">{{report.number_on_route}}</div>
-                    </div>
-                    <div class="col-12">
-                        <div class="p-3 border rounded bg-light text-start">{{ report.description|striptags }}</div>
+                        <div class="border rounded bg-light text-start">
+                            <p class="info-label text-muted">Description:</p>
+                            <p id="report-description">{{ report.description|striptags }}</p>
+                        </div>
                     </div>
                 </div>
             </div>
