--- a/static/css/style.css
+++ b/static/css/style.css
@@ -53,6 +53,10 @@ a {
     text-decoration: none;
 }
 
+a:hover {
+    color: #41ccff;
+}
+
 /* Navbar and Logo */
 
 #logo {
@@ -173,15 +177,19 @@ footer a {
     padding: 0;
     overflow: hidden;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: center;
-    margin: 5px;
+    margin: 5px 5px 0 0;
     border: 1px solid #2596be;
     border-radius: 5px;
 }
 
 .report-img img {
     height: 100%;
-    width: auto;
+    width: 100%;
     object-fit: cover;
+}
+
+#close-img-btn {
+    border-color: #2596be;
 }
