--- a/templates/base.html
+++ b/templates/base.html
@@ -41,7 +41,7 @@
                         <a class="nav-link" aria-current="page" href="{% url 'home' %}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'reports' %}">Report</a>
+                        <a class="nav-link" href="{% url 'reports' %}">Reports</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">Login</a>
