--- a/templates/report_details.html
+++ b/templates/report_details.html
@@ -153,13 +153,14 @@
 
 <div class="container-fluid d-flex flex-column align-items-center">
     <div id="comments-title" class="row w-75">
-        <div class="col-11">
+        <div class="col-8">
             <h2 class="p-0 mb-2">Comments</h2>
-
         </div>
-        <div class="col-1">
+        <div class="col-4 p-0 mr-2 d-flex justify-content-end">
+            <p class="text-muted m-0 p-2">2</p>
+            <h3><i class="fa-regular fa-thumbs-up"></i></h3>
             {% with comments.count as total_comments %}
-            {{ total_comments }}
+            <p class="text-muted m-0 p-2">{{ total_comments }}</p>
             <h3><i class="far fa-comments"></i></h3>
             {% endwith %}
         </div>
