--- a/templates/report_details.html
+++ b/templates/report_details.html
@@ -151,9 +151,9 @@
 
 <!-- Comments & Likes -->
 
-<div class="container-fluid d-flex flex-column align-items-center">
+<div class="container-fluid mb-3 d-flex flex-column align-items-center">
     <div id="comments-title" class="row w-75">
-        <div class="col-8">
+        <div class="col-8 p-0">
             <h2 class="p-0 mb-2">Comments</h2>
         </div>
         <div class="col-4 p-0 mr-2 d-flex justify-content-end">
@@ -167,16 +167,19 @@
     </div>
 
     {% for comment in comments %}
-    <div class="card" style="width: 18rem;">
-        <div class="card-body">
-            <h5 class="card-title">{{ comment.name }}</h5>
-            <h6 class="card-subtitle mb-2 text-muted">{{ comment.created_on }}</h6>
-            <p class="card-text">{{ comment.content|linebreaks }}</p>
-            <a href="#" class="card-link">Card link</a>
-            <a href="#" class="card-link">Another link</a>
+    <div class="row w-75 justify-content-center">
+        <div class="card mt-2 bg-light">
+            <div class="row g-0">
+                <div class="card-body">
+                    <h5 class="card-title"><i class="fa-solid fa-user text-muted"></i> {{ comment.name }}</h5>
+                    <p class="card-text">{{ comment.content|linebreaks }}</p>
+                    <p class="card-text"><small class="text-muted"><i class="fa-solid fa-pen"></i> {{ comment.created_on }}</small></p>
+                </div>
+            </div>
         </div>
     </div>
     {% endfor %}
 </div>
+
 
 {% endblock %}
