--- a/templates/base.html
+++ b/templates/base.html
@@ -43,12 +43,21 @@
                     <li class="nav-item">
                         <a class="nav-link" href="{% url 'reports' %}">Reports</a>
                     </li>
+                    {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Login</a>
+                        <a class="nav-link" href="#">Account</a>
                     </li>
                     <li class="nav-item">
-                        <button type="button" id="signup_button" class="btn nav-link text-dark">Sign-up</button>
+                        <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
                     </li>
+                    {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+                    </li>
+                    <li class="nav-item">
+                        <a id="signup_button" href="{% url 'account_signup' %}" class="btn nav-link text-dark">Sign-up</a>
+                    </li>
+                    {% endif %}
                 </ul>
             </div>
         </div>
