--- a/templates/base.html
+++ b/templates/base.html
@@ -80,12 +80,21 @@
                         <li>
                             <a href="{% url 'reports' %}">Reports</a>
                         </li>
+                        {% if user.is_authenticated %}
                         <li>
-                            <a href="#">Login</a>
+                            <a href="#">Account</a>
                         </li>
                         <li>
-                            <a href="#">Sign-up</a>
+                            <a href="{% url 'account_logout' %}">Logout</a>
                         </li>
+                        {% else %}
+                        <li>
+                            <a href="{% url 'account_login' %}">Login</a>
+                        </li>
+                        <li>
+                            <a href="{% url 'account_signup' %}">Sign-up</a>
+                        </li>
+                        {% endif %}
                     </ul>
                 </div>
                 <div class="d-none col-sm-4 d-sm-flex text-center justify-content-center">
