--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -13,7 +13,10 @@
             <h1 class="text-center">{% trans "Login" %}</h1>
         </div>
         <div class="account-form bg-light col-md-8 offset-md-2">
-            
+
+            <h4 class="text-center mt-2">{% trans "Welcome back to Reach.<br>We hope your adventures were a success." %}
+            </h4>
+
             <form class="login text-center m-4" method="POST" action="{% url 'account_login' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
@@ -22,14 +25,17 @@
                 {% endif %}
                 <button class="primaryAction btn signup_button w-50" type="submit">{% trans "Login" %}</button>
             </form>
-            <p class="text-center">{% blocktrans %}Want to join the community? <br>
-                <a href="{{ signup_url }}" class="mt-md-3 w-50 btn btn-success">Sign Up</a>{% endblocktrans %}</p>
+            <p class="text-center">
+                {% blocktrans %}Want to join the community?
+                <br>
+                <a href="{{ signup_url }}" class="mt-md-3 w-50 btn btn-success">
+                    Sign Up
+                </a>
+                {% endblocktrans %}
+            </p>
         </div>
     </div>
 </div>
-
-
-
 {% endblock %}
 
 <!-- {% get_providers as socialaccount_providers %}
