Style signup.html page

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -25,14 +25,14 @@
                 {% endif %}
                 <button class="primaryAction btn signup_button w-50" type="submit">{% trans "Login" %}</button>
             </form>
-            <p class="text-center">
+            <h5 class="text-center">
                 {% blocktrans %}Want to join the community?
-                <br>
-                <a href="{{ signup_url }}" class="mt-md-3 w-50 btn btn-success">
-                    Sign Up
-                </a>
-                {% endblocktrans %}
-            </p>
+            </h5>
+            <a href="{{ signup_url }}" class="mt-md-3 w-50 btn btn-success">
+                Sign Up
+            </a>
+            {% endblocktrans %}
+
         </div>
     </div>
 </div>
