--- a/static/css/style.css
+++ b/static/css/style.css
@@ -38,12 +38,17 @@ h1 {
 h2,
 h3,
 h4,
+h5,
 h6 {
     font-family: 'Lato', sans-serif;
 }
 
 h4 {
     font-weight: 300;
+}
+
+h5 {
+    font-weight: 400;
 }
 
 h6 {
@@ -64,7 +69,7 @@ a:hover {
 }
 
 .content-wrapper {
-    min-height: 75vh;
+    min-height: 65vh;
 }
 
 /* Navbar and Logo */
