--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,21 +1,39 @@
-{% extends "account/base.html" %}
+{% extends "base.html" %}
 
 {% load i18n %}
 
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<h1>{% trans "Sign Up" %}</h1>
+<div class="container-fluid d-flex justify-content-center mt-5">
+    <div class="row">
+        <div class="col-md-8 offset-md-2 mb-3">
+            <h1 class="text-center">{% trans "Sign Up" %}</h1>
+        </div>
+        <div class="account-form bg-light col-md-8 offset-md-2">
 
-<p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
+            <h4 class="text-center mt-2">
+                {% trans "Welcome to Reach." %}
+            </h4>
+            <p class="text-center">{% trans "To comment, like and create your own reports to share with other climbers, please fill in the form below." %}</p>
 
-<form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  {% if redirect_field_value %}
-  <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
-  {% endif %}
-  <button type="submit">{% trans "Sign Up" %} &raquo;</button>
-</form>
+            <form class="login d-flex flex-column align-items-center w-100 m-2" method="POST" action="{% url 'account_login' %}">
+                {% csrf_token %}
+                {{ form.as_p }}
+                {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+                {% endif %}
+                <button class="primaryAction btn signup_button w-50" type="submit">{% trans "Login" %}</button>
+            </form>
+            <h5 class="text-center">
+                {% blocktrans %}Already have an account?
+            </h5>
+            <a href="{{ login_url }}" class="mt-md-3 w-50 btn btn-success">
+                Login
+            </a>
+            {% endblocktrans %}
 
+        </div>
+    </div>
+</div>
 {% endblock %}
