--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -21,7 +21,7 @@
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
                 <button class="primaryAction btn btn-outline-danger" type="submit">{% trans 'Sign Out' %}</button>
-                <a class="primaryAction btn w-50" href="{% url 'home' %}">Cancel</a>
+                <a class="primaryAction btn w-50 mt-2" href="{% url 'home' %}">Cancel</a>
             </form>
         </div>
     </div>
