--- a/templates/report_details.html
+++ b/templates/report_details.html
@@ -176,7 +176,14 @@
         <div class="card mt-2 bg-light">
             <div class="row g-0">
                 <div class="card-body">
-                    <h5 class="card-title"><i class="fa-solid fa-user text-muted"></i> {{ comment.name }}</h5>
+                    <h5 class="card-title">
+                        <i class="fa-solid fa-user text-muted"></i> 
+                        {% if comment.name %}
+                        {{ comment.name }}
+                        {% else %}
+                        {{ request.user.username }}
+                        {% endif %}
+                    </h5>
                     <p class="card-text">{{ comment.content|linebreaks }}</p>
                     <p class="card-text"><small class="text-muted"><i class="fa-solid fa-pen"></i>
                             {{ comment.created_on }}</small></p>
@@ -186,19 +193,15 @@
     </div>
     {% endfor %}
     {% if user.is_authenticated %}
-    
     <div class="row w-75 p-0 mt-2">
         <h6 class="p-0">Leave a comment:</h6>
         <form class="p-0" method="post">
             {{ comment_form|crispy }}
             {% csrf_token %}
             <p class="float-start"><span class="text-muted">Commenting: </span>{{ user.username }}</p>
-            
             <button type="submit" class="btn btn-dark float-end">Post</button>
         </form>
         {% endif %}
     </div>
 </div>
-
-
 {% endblock %}
