Update small sign up link style issue

--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -23,7 +23,7 @@
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="primaryAction btn signup_button w-50" type="submit">{% trans "Login" %}</button>
+                <button class="primaryAction btn signup_button w-50" type="submit">{% trans "Signup" %}</button>
             </form>
             <h5 class="text-center">
                 {% blocktrans %}Already have an account?
