--- a/templates/base.html
+++ b/templates/base.html
@@ -55,7 +55,7 @@
                         <a class="nav-link" href="{% url 'account_login' %}">Login</a>
                     </li>
                     <li class="nav-item">
-                        <a href="{% url 'account_signup' %}" class="signup_button btn nav-link text-dark">Sign-up</a>
+                        <a href="{% url 'account_signup' %}" class="signup_button btn nav-link text-dark">Signup</a>
                     </li>
                     {% endif %}
                 </ul>
@@ -92,7 +92,7 @@
                             <a href="{% url 'account_login' %}">Login</a>
                         </li>
                         <li>
-                            <a href="{% url 'account_signup' %}">Sign-up</a>
+                            <a href="{% url 'account_signup' %}">Signup</a>
                         </li>
                         {% endif %}
                     </ul>
