--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="container-fluid d-flex justify-content-center mt-5">
+<div class="container-fluid d-flex justify-content-center mt-5 mb-5">
     <div class="row">
         <div class="col-md-8 offset-md-2 mb-3">
             <h1 class="text-center">{% trans "Logout" %}</h1>
