Add messages to base.html and style to float above content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -72,6 +72,15 @@ a:hover {
     min-height: 65vh;
 }
 
+#messages {
+    position: relative;
+}
+
+#msg {
+    position: absolute;
+    z-index: 1;
+}
+
 /* Navbar and Logo */
 
 #logo {
